Fix: community image layout problem

--- a/src/assets/scss/pages/community.scss
+++ b/src/assets/scss/pages/community.scss
@@ -104,6 +104,7 @@
           width: 100%;
           height: 100%;
           object-fit: contain;
+          aspect-ratio: 3 / 2;
           object-position: center;
           text-align: center;
           line-height: 160px;
